# mlx-rvc

./: .gitignore  IMPLEMENTATION_NOTES.md  README.md  pyproject.toml
mlx_rvc/: __init__.py  cli.py  pipeline.py
mlx_rvc/audio/: __init__.py  io.py  processing.py
mlx_rvc/f0/: __init__.py
mlx_rvc/index/: faiss_index.py
mlx_rvc/models/: attentions.py  encoder.py  flow.py  generator.py  synthesizer.py
mlx_rvc/weights/: __init__.py  loader.py
rvc_mlx/: __init__.py  cli.py  pipeline.py
rvc_mlx/f0/: harvest.py  processing.py
rvc_mlx/index/: __init__.py
rvc_mlx/models/: __init__.py  commons.py  generator.py  nsf.py  resblock.py  synthesizer.py
rvc_mlx/weights/: __init__.py  convert.py
scripts/: upload_weights.py
tests/: __init__.py  test_audio.py  test_f0.py  test_generator.py  test_nsf.py  test_resblock.py  test_sample_rate.py  test_synthesizer.py  test_weight_norm.py
